# simple-cfg

./: LICENSE  README.md  example.py  example_lib.py  pyproject.toml
simple_cfg/: __init__.py  cfg.py
